res/examples/invalid/call_noncallable_bool_using_variable.eg
let t = true;

t();

let f = false;

f();

// out: TypeError: bool is not callable
// out: TypeError: bool is not callable